Refactor View Architecture: Fix Component DI and Character geometry rendering